syntax = "proto2";

package apollo.task_manager;

import "modules/common/proto/header.proto";
import "modules/routing/proto/routing.proto";

enum TaskType {
  CYCLE_ROUTING = 0;
}

message CycleRoutingTask {
  optional int32 cycle_num = 1;
  optional apollo.routing.RoutingRequest routing_request = 2;
}

message Task {
  optional apollo.common.Header header = 1;
  optional string task_name = 2;
  optional TaskType task_type = 3;
  optional CycleRoutingTask cycle_routing_task = 4;
}
